--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-        <!-- Tasks Card Example -->
+        <!-- Usage Card  -->
         <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-left-info shadow h-100 py-2">
                 <div class="card-body">
