rename and delete on home page

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -292,3 +292,73 @@ p {
     width: calc(100% - 40px); /* Full width minus padding */
 }
 
+.hidden {
+    display: none;
+}
+.menu-options {
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.menu-options a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.menu-options a:hover {
+    background-color: #f1f1f1;
+}
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 20%; /* Could be more or less, depending on screen size */
+}
+  
+  /* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.ellipsis-wrapper {
+    display: inline-flex; /* Use flexbox for easier centering */
+    align-items: center; /* Centers the content vertically */
+    justify-content: center; /* Centers the content horizontally */
+    padding: 5px; /* Adjust padding to control the size of the hover background */
+    border-radius: 4px; /* Optional: adds rounded corners to the hover background */
+    transition: background-color 0.2s; /* Smooth transition for the background color */
+    height: 12px; /* Adjusted for demonstration, set as needed */
+    width: 15px; /* Adjusted for demonstration, set as needed */
+}
+
+.ellipsis-wrapper:hover {
+    background-color: #f0f0f0; /* Light grey background on hover, change as needed */
+    cursor: pointer; /* Changes the cursor to indicate it's clickable */
+}
