better color concept for the ellipse

--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
                                         </div>
                                         <div class="menu-icon" onclick="toggleMenu(this)">
                                             <div class="ellipsis-wrapper">
-                                                <i class="fa fa-ellipsis-h"></i>
+                                                <i class="fa fa-ellipsis-h" style="color: white"></i>
                                             </div>
                                             <div class="menu-options hidden">
                                                 <a href="#" onclick="event.stopPropagation(); renameChatbot('{{ chatbot[0] }}');">Rename</a>
