--- a/static/css/home.css
+++ b/static/css/home.css
@@ -309,7 +309,7 @@ p {
     display: block;
 }
 .menu-options a:hover {
-    background-color: #f1f1f1;
+    background-color: #d7d7d7;
 }
 /* The Modal (background) */
 .modal {
@@ -359,6 +359,6 @@ p {
 }
 
 .ellipsis-wrapper:hover {
-    background-color: #f0f0f0; /* Light grey background on hover, change as needed */
+    background-color: #c3c3c3; /* Light grey background on hover, change as needed */
     cursor: pointer; /* Changes the cursor to indicate it's clickable */
 }
