--- a/templates/settings.html
+++ b/templates/settings.html
@@ -326,7 +326,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src="http://127.0.0.1:5000/{{ user_id }}/{{ chatbot_id }}/popup.js"></script>
+<script type="text/javascript" src="https://app.eccoai.org/{{ user_id }}/{{ chatbot_id }}/popup.js"></script>
 <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
