--- a/templates/settings.html
+++ b/templates/settings.html
@@ -254,6 +254,16 @@
                                                     </div>
                                                 </div>
                                                 </div>
+                                                <div class="settings-row">
+                                                    <label for="exclude_sources">Exclude Sources:</label>
+                                                    <div class="switch-container">
+                                                        <label class="switch">
+                                                            <input type="checkbox" id="exclude_sources" name="exclude_sources">
+                                                            <span class="slider round"></span>
+                                                        </label>
+                                                        <span class="switch-label">When enabled, the chatbot will not display sources with its answers.</span>
+                                                    </div>
+                                                </div>
                                                 <input type="hidden" id="custom_prompt" name="custom_prompt">
                                             </div>
                                         </div>
