--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -287,7 +287,7 @@
             document.addEventListener('DOMContentLoaded', function() {
                 var userPlan = "{{ subscription_item_id }}";
                 var upgradeContainer = document.getElementById('upgrade-container');
-                if (userPlan == 'price_1P9FIULO2ToUaMQEmx2wG1qC' || userPlan == 'price_1OuIu1LO2ToUaMQE7Prun5Xt') {
+                if (userPlan == 'price_1P9FIULO2ToUaMQEmx2wG1qC') {
                     upgradeContainer.style.display = 'block';
                 }
             });
@@ -312,7 +312,7 @@
             viewConversationsPage.addEventListener(
                 "click",
                 function (event) {
-                    if (userPlan == 'price_1P9FIULO2ToUaMQEmx2wG1qC' || userPlan == 'price_1OuIu1LO2ToUaMQE7Prun5Xt') {
+                    if (userPlan == 'price_1P9FIULO2ToUaMQEmx2wG1qC') {
                         event.preventDefault();
                         myPopup.classList.add("show");
                     }
